Correção de cores e inclusão do texto estrategia de negocio

--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
             <div class="container-fluid p-0 scrolled">
                 <div class="row d-md-flex no-gutters slider-text js-fullheight align-items-center justify-content-end"
                      data-scrollax-parent="true">
-                    <div class="one-third order-md-last img js-fullheight"
-                         style="background-image:url(images/bg_1.jpg);">
+                    <div class="one-third order-md-last img js-fullheight" style="background-image:url(images/slide-1.png);">
                         <div class="overlay"></div>
                     </div>
                     <div class="one-forth d-flex js-fullheight align-items-center ftco-animate"
@@ -110,7 +109,7 @@
                             <p>Aqui estamos atentos a todos os detalhes para que suas aplicações causem o máximo de
                                 impacto aos seus clientes.</p>
 
-                            <p><a href="#" class="btn btn-primary px-5 py-3 mt-3">Fale Conosco</a></p>
+                            <!--<p><a href="#" class="btn btn-primary px-5 py-3 mt-3">Fale Conosco</a></p>-->
                         </div>
                     </div>
                 </div>
@@ -122,8 +121,7 @@
             <div class="container-fluid p-0 scrolled">
                 <div class="row d-flex no-gutters slider-text js-fullheight align-items-center justify-content-end"
                      data-scrollax-parent="true">
-                    <div class="one-third order-md-last img js-fullheight"
-                         style="background-image:url(images/bg_2.jpg);">
+                    <div class="one-third order-md-last img js-fullheight" style="background-image:url(images/bg_2.jpg);">
                         <div class="overlay"></div>
                     </div>
                     <div class="one-forth d-flex js-fullheight align-items-center ftco-animate"
@@ -131,10 +129,10 @@
                         <div class="text">
                             <span class="subheading">Bem vindo a Sanaweb</span>
                             <h1 class="mb-4 mt-3"><span>Estratégias de </span> Design e <span>Tecnologias</span></h1>
-                            <p>As tecnologias e designe usados nos projetos são pensadas para seu négocio, trazendo
+                            <p>As tecnologias e design usados nos projetos são pensadas para seu negócio, trazendo
                                 economia para sua empresa.</p>
 
-                            <p><a href="#" class="btn btn-primary px-5 py-3 mt-3">Fale Conosco</a></p>
+                            <!--<p><a href="#" class="btn btn-primary px-5 py-3 mt-3">Fale Conosco</a></p>-->
                         </div>
                     </div>
                 </div>
@@ -182,16 +180,16 @@
 
                 <div class="tab-content pl-md-5" id="v-pills-tabContent">
 
-                    <div class="tab-pane fade show active py-5" id="v-pills-1" role="tabpanel"
-                         aria-labelledby="v-pills-1-tab">
+                    <div class="tab-pane fade show active py-5" id="v-pills-1" role="tabpanel" aria-labelledby="v-pills-1-tab">
                         <span class="icon mb-3 d-block flaticon-ideas"></span>
                         <h2 class="mb-4">Estratégia de negócio</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptate, quibusdam sunt
-                            iste dolores consequatur</p>
-                        <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis
-                            officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae
-                            deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                        <p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
+                        <p>Considerando o cenário atual de competição globalizada, a expectativa de vida e prosperidade das organizações é determinada
+                            pela sua capacidade de se adaptar ao ambiente em evolução contínua. A necessidade de sobreviver e prosperar neste cenário de
+                            constantes mudanças requer que as vantagens competitivas também sejam revistas e melhoradas e isto têm exigido às empresas a
+                            criação estruturada da Estratégia e a organização disciplinada dos esforços de sua implementação.</p>
+                        <p>Preparar a Estratégia com clareza e implantá-la com disciplina sem perder o foco têm se tornado fatores críticos para o
+                            crescimento sustentável das empresas.</p>
+                        <p><a href="#" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
                     </div>
 
                     <div class="tab-pane fade py-5" id="v-pills-2" role="tabpanel" aria-labelledby="v-pills-2-tab">
@@ -202,7 +200,7 @@
                         <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis
                             officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae
                             deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                        <p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
+                        <p><a href="#" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
                     </div>
 
                     <div class="tab-pane fade py-5" id="v-pills-3" role="tabpanel" aria-labelledby="v-pills-3-tab">
@@ -310,13 +308,11 @@
     </div>
 </section>
 
-<section class="ftco-section ftco-project bg-light" id="projects-section">
+<section class="ftco-section ftco-project testimony-section" id="projects-section">
     <div class="container px-md-5">
         <div class="row justify-content-center pb-5">
             <div class="col-md-12 heading-section text-center ftco-animate">
-                <span class="subheading">Realizações</span>
-                <h2 class="mb-4">Nossos Projetos</h2>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+                <h2 class="mb-4 text-white">Nossos Projetos</h2>
             </div>
         </div>
         <div class="row">
@@ -434,7 +430,7 @@
     </div>
 </section>
 
-<section class="ftco-section">
+<!--<section class="ftco-section">
     <div class="container">
         <div class="row justify-content-center pb-5">
             <div class="col-md-6 heading-section text-center ftco-animate">
@@ -722,15 +718,13 @@
             </div>
         </div>
     </div>
-</section>
+</section>-->
 
 <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
     <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
             <div class="col-md-7 heading-section text-center ftco-animate">
-                <span class="subheading">Contato</span>
-                <h2 class="mb-4">Contact Us</h2>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+                <h2 class="mb-4">Contato</h2>
             </div>
         </div>
         <div class="row d-flex contact-info mb-5">
