Correção de cores e inclusão do texto estrategia de negocio

--- a/index.html
+++ b/index.html
@@ -83,8 +83,6 @@
                 <li class="nav-item"><a href="#services-section" class="nav-link"><span>Serviços</span></a></li>
                 <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projetos</span></a></li>
                 <li class="nav-item"><a href="#about-section" class="nav-link"><span>Empresa</span></a></li>
-                <li class="nav-item"><a href="#testimony-section" class="nav-link"><span>Clientes</span></a></li>
-                <li class="nav-item"><a href="#blog-section" class="nav-link"><span>Blog</span></a></li>
                 <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contato</span></a></li>
             </ul>
         </div>
@@ -211,7 +209,7 @@
                         <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis
                             officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae
                             deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                        <p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
+                        <p><a href="#" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
                     </div>
 
                     <div class="tab-pane fade py-5" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-4-tab">
@@ -222,7 +220,7 @@
                         <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis
                             officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae
                             deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                        <p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
+                        <p><a href="#" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
                     </div>
 
                     <div class="tab-pane fade py-5" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-4-tab">
@@ -233,7 +231,7 @@
                         <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis
                             officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae
                             deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                        <p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
+                        <p><a href="#" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
                     </div>
 
                     <div class="tab-pane fade py-5" id="v-pills-5" role="tabpanel" aria-labelledby="v-pills-5-tab">
@@ -244,7 +242,7 @@
                         <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis
                             officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae
                             deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                        <p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
+                        <p><a href="#" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
                     </div>
 
                     <div class="tab-pane fade py-5" id="v-pills-6" role="tabpanel" aria-labelledby="v-pills-6-tab">
@@ -255,7 +253,7 @@
                         <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis
                             officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae
                             deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                        <p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
+                        <p><a href="#" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
                     </div>
                 </div>
             </div>
@@ -274,16 +272,16 @@
                                 <span class="ion-ios-arrow-back"></span>
                                 <span class="ion-ios-arrow-forward"></span>
                             </div>-->
-                            <h2>Pesquisa de Mercado</h2>
-                            <p>Even the all-powerful Pointing has no control about the blind.</p>
+                            <h2>Aplicativos Mobile</h2>
+                            <p>Desenvolvimento de apps para Android e IOS.</p>
                         </a>
                         <a href="#" class="services-wrap ftco-animate">
                             <!--<div class="icon d-flex justify-content-center align-items-center">
                                 <span class="ion-ios-arrow-back"></span>
                                 <span class="ion-ios-arrow-forward"></span>
                             </div>-->
-                            <h2>CEO</h2>
-                            <p>Even the all-powerful Pointing has no control about the blind.</p>
+                            <h2>Sites Responsivos</h2>
+                            <p>Sites pensados para seu negócio e funcionando em todas as plataformas.</p>
                         </a>
                         <a href="#" class="services-wrap ftco-animate">
                             <!--<div class="icon d-flex justify-content-center align-items-center">
@@ -291,7 +289,7 @@
                                 <span class="ion-ios-arrow-forward"></span>
                             </div>-->
                             <h2>Marketing on-line</h2>
-                            <p>Even the all-powerful Pointing has no control about the blind.</p>
+                            <p>Estrategias de marketing pensados para sua empresa.</p>
                         </a>
                         <a href="#" class="services-wrap ftco-animate">
                             <!--<div class="icon d-flex justify-content-center align-items-center">
@@ -299,7 +297,7 @@
                                 <span class="ion-ios-arrow-forward"></span>
                             </div>-->
                             <h2>Ajuda e Suporte 24h</h2>
-                            <p>Even the all-powerful Pointing has no control about the blind.</p>
+                            <p>Conte com a gente 24 horas por dia.</p>
                         </a>
                     </div>
                 </div>
@@ -312,7 +310,7 @@
     <div class="container px-md-5">
         <div class="row justify-content-center pb-5">
             <div class="col-md-12 heading-section text-center ftco-animate">
-                <h2 class="mb-4 text-white">Nossos Projetos</h2>
+                <h2 class="mb-4 text-white">Projetos</h2>
             </div>
         </div>
         <div class="row">
@@ -323,8 +321,8 @@
                             <div class="img">
                                 <img src="images/project-1.jpg" class="img-fluid" alt="Colorlib Template">
                                 <div class="text px-4">
-                                    <h3><a href="#">Work Name</a></h3>
-                                    <span>Web Design</span>
+                                    <h3><a href="#">Salumi Alimentos</a></h3>
+                                    <span>Carrinho de Compras</span>
                                 </div>
                             </div>
                         </div>
@@ -334,8 +332,8 @@
                             <div class="img">
                                 <img src="images/project-2.jpg" class="img-fluid" alt="Colorlib Template">
                                 <div class="text px-4">
-                                    <h3><a href="#">Work Name</a></h3>
-                                    <span>Web Design</span>
+                                    <h3><a href="#">Renov</a></h3>
+                                    <span>Institucional</span>
                                 </div>
                             </div>
                         </div>
@@ -345,13 +343,13 @@
                             <div class="img">
                                 <img src="images/project-3.jpg" class="img-fluid" alt="Colorlib Template">
                                 <div class="text px-4">
-                                    <h3><a href="#">Work Name</a></h3>
-                                    <span>Web Design</span>
+                                    <h3><a href="#">Sanambiental</a></h3>
+                                    <span>Institucional</span>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="item">
+                    <!--<div class="item">
                         <div class="project">
                             <div class="img">
                                 <img src="images/project-4.jpg" class="img-fluid" alt="Colorlib Template">
@@ -383,7 +381,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
@@ -734,7 +732,7 @@
                         <span class="icon-map-signs"></span>
                     </div>
                     <h3 class="mb-4">Endereço</h3>
-                    <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+                    <p>Avenida C, 184 - Quadra L, Lote 7 Sala 07 Ed. Vision Água Branca, Goiânia - GO, 74723-060</p>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -743,7 +741,7 @@
                         <span class="icon-phone2"></span>
                     </div>
                     <h3 class="mb-4">Telefone</h3>
-                    <p><a href="tel://1234567920">+ 1235 2355 98</a></p>
+                    <p><a href="tel:+5562982363343">62 98236 3343</a></p>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -752,7 +750,7 @@
                         <span class="icon-paper-plane"></span>
                     </div>
                     <h3 class="mb-4">Email</h3>
-                    <p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+                    <p><a href="mailto:info@yoursite.com">contato@sanaweb.com.br</a></p>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -761,7 +759,7 @@
                         <span class="icon-globe"></span>
                     </div>
                     <h3 class="mb-4">Whatsapp</h3>
-                    <p><a href="#">yoursite.com</a></p>
+                    <p><a href="#">62 98236 3343</a></p>
                 </div>
             </div>
         </div>
@@ -769,20 +767,20 @@
             <div class="col-md-6 order-md-last d-flex">
                 <form action="#" class="bg-light p-5 contact-form">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Your Name">
+                        <input type="text" class="form-control" placeholder="Nome">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Your Email">
+                        <input type="text" class="form-control" placeholder="Email">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Subject">
+                        <input type="text" class="form-control" placeholder="Assunto">
                     </div>
                     <div class="form-group">
                         <textarea name="" id="" cols="30" rows="7" class="form-control"
-                                  placeholder="Message"></textarea>
+                                  placeholder="Mensagem"></textarea>
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+                        <input type="submit" value="Enviar mensagem" class="btn btn-primary py-3 px-5">
                     </div>
                 </form>
 
@@ -802,8 +800,7 @@
             <div class="col-md">
                 <div class="ftco-footer-widget mb-4">
                     <h2 class="ftco-heading-2">Sobre a Sanaweb</h2>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
-                        live the blind texts.</p>
+                    <p>A vida digital da sua empresa agora é prioridade. Sites, APPs, Redes Sociais e Big Data.</p>
                     <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                         <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                         <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -816,35 +813,34 @@
                     <h2 class="ftco-heading-2">Links</h2>
                     <ul class="list-unstyled">
                         <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
-                        <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
-                        <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
-                        <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
-                        <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
+                        <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Serviços</a></li>
+                        <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Projetos</a></li>
+                        <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Empresa</a></li>
+                        <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contato</a></li>
                     </ul>
                 </div>
             </div>
             <div class="col-md">
                 <div class="ftco-footer-widget mb-4">
-                    <h2 class="ftco-heading-2">Services</h2>
+                    <h2 class="ftco-heading-2">Serviços</h2>
                     <ul class="list-unstyled">
-                        <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Design</a></li>
-                        <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Development</a></li>
-                        <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Business Strategy</a></li>
-                        <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Data Analysis</a></li>
-                        <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Graphic Design</a></li>
+                        <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Aplicações Mobile</a></li>
+                        <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Sites Responsivos</a></li>
+                        <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Estratégia de negócio</a></li>
+                        <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Análise de dados</a></li>
                     </ul>
                 </div>
             </div>
             <div class="col-md">
                 <div class="ftco-footer-widget mb-4">
-                    <h2 class="ftco-heading-2">Have a Questions?</h2>
+                    <h2 class="ftco-heading-2">Alguma Dúvida?</h2>
                     <div class="block-23 mb-3">
                         <ul>
-                            <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span>
+                            <li><span class="icon icon-map-marker"></span><span class="text">Avenida C, 184 - Quadra L, Lote 7 Sala 07 Ed. Vision Água Branca, Goiânia - GO, 74723-060</span>
                             </li>
                             <li><a href="#"><span class="icon icon-phone"></span><span
-                                    class="text">+2 392 3929 210</span></a></li>
-                            <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a>
+                                    class="text">62 98236 3343</span></a></li>
+                            <li><a href="#"><span class="icon icon-envelope"></span><span class="text">contato@sanaweb.com.br</span></a>
                             </li>
                         </ul>
                     </div>
@@ -856,9 +852,7 @@
 
                 <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     Copyright &copy;<script>document.write(new Date().getFullYear());</script>
-                    All rights reserved | This template is made with <i class="icon-heart color-danger"
-                                                                        aria-hidden="true"></i> by <a
-                            href="https://colorlib.com" target="_blank">Colorlib</a>
+                    Todos os direitos reservados.
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
             </div>
         </div>
