--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                             criação estruturada da Estratégia e a organização disciplinada dos esforços de sua implementação.</p>
                         <p>Preparar a Estratégia com clareza e implantá-la com disciplina sem perder o foco têm se tornado fatores críticos para o
                             crescimento sustentável das empresas.</p>
-                        <p><a href="#" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
+                        <p><a href="#contact-section" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
                     </div>
 
                     <div class="tab-pane fade py-5" id="v-pills-2" role="tabpanel" aria-labelledby="v-pills-2-tab">
@@ -198,7 +198,7 @@
                         <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis
                             officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae
                             deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                        <p><a href="#" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
+                        <p><a href="#contact-section" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
                     </div>
 
                     <div class="tab-pane fade py-5" id="v-pills-3" role="tabpanel" aria-labelledby="v-pills-3-tab">
@@ -209,7 +209,7 @@
                         <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis
                             officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae
                             deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                        <p><a href="#" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
+                        <p><a href="#contact-section" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
                     </div>
 
                     <div class="tab-pane fade py-5" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-4-tab">
@@ -220,7 +220,7 @@
                         <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis
                             officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae
                             deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                        <p><a href="#" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
+                        <p><a href="#contact-section" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
                     </div>
 
                     <div class="tab-pane fade py-5" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-4-tab">
@@ -231,7 +231,7 @@
                         <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis
                             officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae
                             deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                        <p><a href="#" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
+                        <p><a href="#contact-section" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
                     </div>
 
                     <div class="tab-pane fade py-5" id="v-pills-5" role="tabpanel" aria-labelledby="v-pills-5-tab">
@@ -242,7 +242,7 @@
                         <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis
                             officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae
                             deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                        <p><a href="#" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
+                        <p><a href="#contact-section" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
                     </div>
 
                     <div class="tab-pane fade py-5" id="v-pills-6" role="tabpanel" aria-labelledby="v-pills-6-tab">
@@ -253,7 +253,7 @@
                         <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis
                             officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae
                             deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
-                        <p><a href="#" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
+                        <p><a href="#contact-section" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
                     </div>
                 </div>
             </div>
@@ -319,7 +319,7 @@
                     <div class="item">
                         <div class="project">
                             <div class="img">
-                                <img src="images/project-1.jpg" class="img-fluid" alt="Colorlib Template">
+                                <img src="images/salumi.png" class="img-fluid" alt="Colorlib Template">
                                 <div class="text px-4">
                                     <h3><a href="#">Salumi Alimentos</a></h3>
                                     <span>Carrinho de Compras</span>
@@ -330,7 +330,7 @@
                     <div class="item">
                         <div class="project">
                             <div class="img">
-                                <img src="images/project-2.jpg" class="img-fluid" alt="Colorlib Template">
+                                <img src="images/renov.png" class="img-fluid" alt="Colorlib Template">
                                 <div class="text px-4">
                                     <h3><a href="#">Renov</a></h3>
                                     <span>Institucional</span>
@@ -341,7 +341,7 @@
                     <div class="item">
                         <div class="project">
                             <div class="img">
-                                <img src="images/project-3.jpg" class="img-fluid" alt="Colorlib Template">
+                                <img src="images/sanambiental.png" class="img-fluid" alt="Colorlib Template">
                                 <div class="text px-4">
                                     <h3><a href="#">Sanambiental</a></h3>
                                     <span>Institucional</span>
@@ -718,7 +718,7 @@
     </div>
 </section>-->
 
-<section class="ftco-section contact-section ftco-no-pb" id="contact-section">
+<section class="ftco-section contact-section ftco-no-pb bg-light" id="contact-section">
     <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
             <div class="col-md-7 heading-section text-center ftco-animate">
@@ -729,7 +729,7 @@
             <div class="col-md-6 col-lg-3 d-flex ftco-animate">
                 <div class="align-self-stretch box p-4 text-center">
                     <div class="icon d-flex align-items-center justify-content-center">
-                        <span class="icon-map-signs"></span>
+                        <span class="icon-map-marker"></span>
                     </div>
                     <h3 class="mb-4">Endereço</h3>
                     <p>Avenida C, 184 - Quadra L, Lote 7 Sala 07 Ed. Vision Água Branca, Goiânia - GO, 74723-060</p>
@@ -747,7 +747,7 @@
             <div class="col-md-6 col-lg-3 d-flex ftco-animate">
                 <div class="align-self-stretch box p-4 text-center">
                     <div class="icon d-flex align-items-center justify-content-center">
-                        <span class="icon-paper-plane"></span>
+                        <span class="icon-envelope"></span>
                     </div>
                     <h3 class="mb-4">Email</h3>
                     <p><a href="mailto:info@yoursite.com">contato@sanaweb.com.br</a></p>
@@ -756,7 +756,7 @@
             <div class="col-md-6 col-lg-3 d-flex ftco-animate">
                 <div class="align-self-stretch box p-4 text-center">
                     <div class="icon d-flex align-items-center justify-content-center">
-                        <span class="icon-globe"></span>
+                        <span class="icon-whatsapp"></span>
                     </div>
                     <h3 class="mb-4">Whatsapp</h3>
                     <p><a href="#">62 98236 3343</a></p>
@@ -787,7 +787,8 @@
             </div>
 
             <div class="col-md-6 d-flex">
-                <div id="map" class="bg-white"></div>
+                <iframe width="100%" height="100%" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:EjZBdi4gQyAtIMOBZ3VhIEJyYW5jYSwgR29pw6JuaWEgLSBHTywgNzQ3MjMtMDYwLCBCcmF6aWwiLiosChQKEgl5I__jt_FekxHNP1AYeyRC-xIUChIJOY3MjLjxXpMRDQsYZRXpJp4&key=AIzaSyBMdht6G6du7hkI01EaFR2--clHEzjEwAg" allowfullscreen></iframe>
+                <!--<div id="map" class="bg-white"></div>-->
             </div>
         </div>
     </div>
