correção de textos

--- a/index.html
+++ b/index.html
@@ -193,11 +193,15 @@
                     <div class="tab-pane fade py-5" id="v-pills-2" role="tabpanel" aria-labelledby="v-pills-2-tab">
                         <span class="icon mb-3 d-block flaticon-flasks"></span>
                         <h2 class="mb-4">Pesquisa</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptate, quibusdam sunt
-                            iste dolores consequatur</p>
-                        <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis
-                            officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae
-                            deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
+
+                        <p>A pesquisa de mercado é um verdadeiro exercício de comportamentos empreendedores, principalmente na busca de informações, comprometimento e persistência.
+                        Não há fórmulas prontas para a busca de informações. Porém, existem técnicas sistematizadas de pesquisa e formas mais práticas de observação no dia a dia
+                        da empresa.</p>
+
+                        <p>O potencial empresário ou o empresário, interessado em buscar informações no mercado, poderá utilizar fontes de dados primários (aqueles que ele próprio
+                            vai encontrar, coletar) ou fontes de dados secundários, ou seja, aqueles já coletados e sistematizados por outros, como instituições de pesquisa, e
+                            disponibilizados por governos municipais, estaduais e federal e demais instituições relacionadas à área do negócio, a SANAWEB se encarrega de todo esse processo para seus clientes.
+                        </p>
                         <p><a href="#contact-section" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
                     </div>
 
@@ -403,15 +407,16 @@
                         <div class="col-md-12 heading-section ftco-animate">
                             <span class="subheading">Bem vindo a Sanaweb</span>
                             <h2 class="mb-4" style="font-size: 34px; text-transform: capitalize;">Agência Digital</h2>
-                            <p>A small river named Duden flows by their place and supplies it with the necessary
-                                regelialia. It is a paradisematic country, in which roasted parts of sentences fly into
-                                your mouth.</p>
-                            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                                unorthographic life One day however a small line of blind text by the name of Lorem
-                                Ipsum decided to leave for the far World of Grammar.</p>
-                            <p>A small river named Duden flows by their place and supplies it with the necessary
-                                regelialia. It is a paradisematic country, in which roasted parts of sentences fly into
-                                your mouth.</p>
+
+                            <p>A SANAWEB tem em seu DNA o serviço digital, e se caracteriza por ser uma empresa especializada em desenvolver estratégias de comunicação e marketing para
+                            marcas e negócios locais pela internet. Os profissionais de uma agência são de diferentes áreas do conhecimento, como especialistas em redes sociais,
+                            redação, design, gerentes de projetos, especialistas em tecnologia, entre outros.</p>
+
+                            <p>Entre a variedade de serviços que a SANAWEB presta estão a criação de conteúdo de qualidade para alimentar blogs e redes sociais,
+                            desenvolvimento de sites e campanhas de anúncios e links patrocinados no Google e etc.</p>
+
+                            <p>A partir da análise de profissionais qualificados e habituados com o meio digital é possível traçar o melhor planejamento para cada marca, identificando
+                            as oportunidades e acompanhando os resultados analisando métricas para entregar os melhores resultados para os clientes.</p>
                         </div>
                     </div>
                     <div class="counter-wrap ftco-animate d-flex mt-md-3">
