--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@
                        aria-controls="v-pills-4" aria-selected="false"><span class="mr-3 flaticon-ux-design"></span> Ux
                         Design</a>
 
-                    <a class="nav-link px-4" id="v-pills-5-tab" data-toggle="pill" href="#v-pills-5" role="tab"
+                   <!-- <a class="nav-link px-4" id="v-pills-5-tab" data-toggle="pill" href="#v-pills-5" role="tab"
                        aria-controls="v-pills-5" aria-selected="false"><span class="mr-3 flaticon-innovation"></span>
                         Tecnologia</a>
 
                     <a class="nav-link px-4" id="v-pills-6-tab" data-toggle="pill" href="#v-pills-6" role="tab"
                        aria-controls="v-pills-6" aria-selected="false"><span class="mr-3 flaticon-idea"></span>
-                        Criatividade</a>
+                        Criatividade</a>-->
                 </div>
             </div>
             <div class="col-md-8 ftco-animate p-4 p-md-5 d-flex align-items-center">
@@ -208,44 +208,40 @@
                     <div class="tab-pane fade py-5" id="v-pills-3" role="tabpanel" aria-labelledby="v-pills-3-tab">
                         <span class="icon mb-3 d-block flaticon-analysis"></span>
                         <h2 class="mb-4">Análise de dados</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptate, quibusdam sunt
-                            iste dolores consequatur</p>
-                        <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis
-                            officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae
-                            deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
+
+                        <p>análise de dados é uma das formas mais eficazes de nutrir os direcionamentos, planejamentos e iniciativas de um negócio. A empresa ganha na visualização de indicativos,
+                        sinais para a tomada de decisão e o famoso “Insight”.</p>
+
+                        <p>A partir desse conhecimento apurado é possível definir os melhores caminhos a seguir, que apresentem melhores chances de retorno e sucesso. Veja a seguir algumas razões
+                        relevantes que encontramos para que coloque uma estratégia de análise de dados em prática!</p>
+
                         <p><a href="#contact-section" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
                     </div>
 
                     <div class="tab-pane fade py-5" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-4-tab">
                         <span class="icon mb-3 d-block flaticon-web-design"></span>
                         <h2 class="mb-4">UI Design</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptate, quibusdam sunt
-                            iste dolores consequatur</p>
-                        <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis
-                            officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae
-                            deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
+                        <p>Um bom projeto de UI antecipa as necessidades do usuário e garante que a interface contenha elementos de fácil acesso e utilização, fornecendo o que é chamado de experiência
+                            user-friendly, ou seja, uma experiência que é amigável e que não cause frustrações ao utilizador</p>
                         <p><a href="#contact-section" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
                     </div>
 
                     <div class="tab-pane fade py-5" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-4-tab">
                         <span class="icon mb-3 d-block flaticon-ux-design"></span>
                         <h2 class="mb-4">Ux Design</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptate, quibusdam sunt
-                            iste dolores consequatur</p>
-                        <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis
-                            officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae
-                            deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
+                        <p>A aplicação do UX Design pode ser feita com qualquer marca, produto ou serviço, uma vez que se baseia em interações humanas. Essas interações podem ser feitas com um sistema,
+                        website, loja, atendimento telefônico ou painel de controle.</p>
+
+                        <p>É fato que a experiência do usuário com uma marca, produto ou serviço, é muito pessoal e cada pessoa percebe a interação de uma maneira diferente. Assim, o UX  trabalha para
+                        atingir positivamente o maior número de pessoas possíveis, com base em pesquisas e testes constantes.</p>
                         <p><a href="#contact-section" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
                     </div>
-
+<!--
                     <div class="tab-pane fade py-5" id="v-pills-5" role="tabpanel" aria-labelledby="v-pills-5-tab">
                         <span class="icon mb-3 d-block flaticon-innovation"></span>
                         <h2 class="mb-4">Tecnologias</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptate, quibusdam sunt
-                            iste dolores consequatur</p>
-                        <p>Inventore fugit error iure nisi reiciendis fugiat illo pariatur quam sequi quod iusto facilis
-                            officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae
-                            deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
+                        <p>GOOGLE ANALYTICS, Google Search Console, Google Tag Manager, Big Data, Data Flow, Java.</p>
+                        <p></p>
                         <p><a href="#contact-section" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
                     </div>
 
@@ -258,7 +254,7 @@
                             officiis nobis sit quis molestias asperiores rem, blanditiis! Commodi exercitationem vitae
                             deserunt qui nihil ea, tempore et quam natus quaerat doloremque.</p>
                         <p><a href="#contact-section" class="btn btn-primary px-4 py-3">Saiba mais</a></p>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
@@ -301,7 +297,7 @@
                                 <span class="ion-ios-arrow-forward"></span>
                             </div>-->
                             <h2>Ajuda e Suporte 24h</h2>
-                            <p>Conte com a gente 24 horas por dia.</p>
+                            <p>Conte conosco 24 horas por dia.</p>
                         </a>
                     </div>
                 </div>
